# PythonWebCrawler

./: .gitignore  README.md  config.example.yaml  pyproject.toml
crawler/: __init__.py  cli.py  settings.py
crawler/adapters/: base.py  gov_open_data.py  gov_open_data_terms.md  internet_archive_docs.py  internet_archive_docs_terms.md  retailer_api_example.py  retailer_api_example_terms.md  tmdb_free.py  tmdb_free_terms.md  youtube_free.py  youtube_free_terms.md
crawler/core/: audit.py  http.py  models.py  pipeline.py  storage.py  utils.py
tests/: test_deduplication.py  test_pipeline.py  test_utils.py  test_youtube_duration.py
